--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,12 +1,17 @@
 h1 {
-  color: blue;
+  color: #0C81D5;
   text-align: center;
-  font-size: 48px;
+  font-size: 54px;
+}
+h3 {
+  color: #0C81D5;
+  text-align:justify;
+  font-size: 28px;
 }
 p {
   color: black;
   text-align: left;
-  font-size: 20px;
+  font-size: 24px;
 }
 #me {
   float: left;
@@ -14,4 +19,17 @@ p {
 }
 #ad {
   float: right;
+}
+#barney {
+  float: right;
+  margin: 0 15px 0 15px;
+}
+#id {
+  float: right;
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  font-size: 20px;
 }
